# pcre-ocaml

./: .gitignore  API.odocl  AUTHORS.txt  CHANGELOG.md  CHANGES.md  CHANGES.txt  Changelog  Changes  INSTALL.txt  LICENSE.md  Makefile  OCamlMakefile  README  README.md  README.win32  VERSION  _config.yml  _oasis  _opam  _tags  dune-project  index.html  index.md  myocamlbuild.ml  params.json  pcre.opam  setup.ml
.github/workflows/: main.yml  pre-commit.yml
api/: Pcre.html  html.stamp  index.html  index_attributes.html  index_class_types.html  index_classes.html  index_exceptions.html  index_extensions.html  index_methods.html  index_module_types.html  index_modules.html  index_types.html  index_values.html  type_Pcre.html
api/_html/: index.html
api/_html/pcre/Pcre/: index.html
api/_mlds/pcre/: index.mld
api/_odoc/lib/pcre/: pcre.odoc
api/pcre/: index.html
api/pcre/Pcre/: index.html
doc/: api.odocl
examples/: Makefile  OMakefile  README.md  count_hash.ml  dfa_restart.ml  dune  jbuild  pcregrep.ml  subst.ml
examples/cloc/: Makefile  cloc.ml  jbuild
examples/count_hash/: Makefile  jbuild
examples/pcregrep/: Makefile  jbuild  pcregrep.ml
examples/subst/: Makefile  README.md  jbuild
lib/: META  Makefile  libpcre_stubs.clib  pcre.ml  pcre.mldylib  pcre.mli  pcre_compat.ml  pcre_compat312.ml  pcre_compat402.ml  pcre_stubs.c
lib/config/: discover.ml
pa_ppx_test/: Makefile  pcre_tests.ml
pcre_make.win32/: make_pcre.ml
src/: Makefile  dune  jbuild  pcre.ml  pcre.mli  pcre_stubs.c
src/config/: Makefile  discover.ml
test/: dune  pcre_tests.ml
(+2 files in other folders)
